# veclayer

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_QUALITY.md  Cargo.toml  Dockerfile  FINDINGS.md  README.md  ROADMAP.md  Roadmap.md  TESTPLAN.md  Tasks.md  build.rs  cliff.toml  fly.toml  opencode.json
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json.example  settings.json.example.multi-project  settings.local.json
.github/workflows/: ci.yml
docs/: architecture.md  wohngeld.md
docs/design/: git-storage.md
src/: access_profile.rs  aging.rs  blob_store.rs  chunk.rs  commands.rs  config.rs  entry.rs  error.rs  git_detect.rs  helpers.rs  identity.rs  lib.rs  macros.rs  main.rs  perspective.rs  relations.rs  resolve.rs  salience.rs  test_helpers.rs  think.rs  util.rs
src/auth/: capability.rs  middleware.rs  mod.rs  oauth.rs  token.rs  token_store.rs
src/cluster/: mod.rs  pipeline.rs  soft_cluster.rs
src/commands/: add.rs  auth.rs  data.rs  identity.rs  merge.rs  mod.rs  perspective_ops.rs  reflect.rs  search.rs  serve.rs  store_ops.rs  sync.rs  think.rs
src/crypto/: device_flow.rs  keypair.rs  keystore.rs  mod.rs
src/embedder/: fastembed_impl.rs  mod.rs  ollama_impl.rs
src/git/: branch_config.rs  detect.rs  embedding_cache.rs  markdown.rs  memory_store.rs  mod.rs  plumbing.rs  sync.rs  worktree.rs
src/llm/: mod.rs  ollama.rs  openai.rs
src/mcp/: embed_worker.rs  format.rs  handler.rs  http.rs  mod.rs  resources.rs  stdio.rs  tools.rs  types.rs
src/parser/: markdown.rs  mod.rs
src/search/: mod.rs
src/store/: lancedb_impl.rs  lock.rs  mod.rs
src/summarizer/: mod.rs  ollama.rs
src/sync/: mod.rs
tests/: auth_integration.rs  git_review_integration.rs  http_integration.rs  integration_config.rs  mcp_integration.rs  ollama_integration.rs
