[package]
name = "veclayer"
version = "0.1.0"
edition = "2021"
description = "Hierarchical vector indexing for documents"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Vector DB
lancedb = "0.21"
arrow-array = "55"
arrow-schema = "55"

# Embeddings
fastembed = "4"

# Markdown parsing
pulldown-cmark = "0.13"

# MCP Server (manual implementation, no rmcp dependency for prototype)

# Web server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
schemars = "0.8"

# HTTP client (for Ollama)
reqwest = { version = "0.12", features = ["json"] }

# Clustering
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"  # Must match linfa's ndarray version

[dev-dependencies]
tempfile = "3"
