[package]
name = "veclayer"
version = "0.1.0"
edition = "2021"
description = "Hierarchical vector memory for AI agents — perspectives, salience, aging, identity"
license = "MIT"
repository = "https://github.com/burka/veclayer"
homepage = "https://github.com/burka/veclayer"
readme = "README.md"
authors = ["Florian Burka"]
keywords = ["vector", "embedding", "memory", "llm", "rag"]
categories = ["database", "command-line-utilities"]
exclude = [".claude/", ".mcp.json", "opencode.json"]
rust-version = "1.91"

[features]
default = ["llm"]
llm = ["dep:reqwest", "dep:linfa", "dep:linfa-clustering", "dep:ndarray"]
sync = []

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Vector DB
lancedb = "0.21"
arrow-array = "55"
arrow-schema = "55"

# Embeddings
fastembed = "4"

# Markdown parsing
pulldown-cmark = "0.13"

# MCP Server (rmcp — official Rust MCP SDK)
rmcp = { version = "1.1", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }

# Web server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Content-hash IDs
sha2 = "0.10"
blake3 = "1"

# Cryptographic identity (Phase 6a)
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }

# Auth — JWT tokens and capability model (Phase 6b)
jsonwebtoken = { version = "10", features = ["ed25519-dalek", "rust_crypto"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rpassword = "7"
bs58 = "0.5"
base64 = "0.22"

# Binary serialization
postcard = { version = "1", default-features = false, features = ["alloc"] }

# Date/time (needed for rmcp Annotations)
chrono = { version = "0.4", default-features = false, features = ["std"] }

# Utilities
walkdir = "2"
strsim = "0.11"
schemars = "1"
fs2 = "0.4"
directories = "6"
glob = "0.3"
regex = "1"
shellexpand = "3"

# LLM-dependent (gated behind "llm" feature)
reqwest = { version = "0.12", features = ["json"], optional = true }
linfa = { version = "0.7", optional = true }
linfa-clustering = { version = "0.7", optional = true }
ndarray = { version = "0.15", optional = true }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
percent-encoding = "2"
serde_yml = "0.0.12"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
reqwest = { version = "0.12", features = ["json"] }
